# youtube-video-indexer

./: .env.template  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  app.py  docker-compose.yml  index.html  init-mongo.sh  main.py  objects.inv  pyproject.toml
app/: main.py
architecture/data-flow/: index.html
architecture/data-stores/: index.html
architecture/overview/: index.html
architecture/scaling/: index.html
architecture/services/: index.html
assets/: ARCHITECTURE.md
docker/: app.Dockerfile  indexer.Dockerfile  worker.Dockerfile
docs/: index.md  mkdocs.yml
docs/architecture/: data-flow.md  data-stores.md  overview.md  scaling.md  services.md
docs/documentation/: api.md  database.md  indexer.md  queues.md  worker.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
documentation/api/: index.html
documentation/database/: index.html
documentation/indexer/: index.html
documentation/queues/: index.html
documentation/worker/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
load_tests/: locustfile.py  requirements.txt
notebooks/: app.py  channel.csv  embeddings.ipynb  embeddings.py  extract_transcript.ipynb  extract_transcript.py  extract_video_info.ipynb  extract_video_info.py  message_handler.py  note.ipynb  notebook.ipynb  notifications.py  queue.ipynb  queue.py  search_documents.ipynb  search_documents.py  subscribe.ipynb  subscribe.py
search/: search_index.json
services/indexer/: main.py
services/worker/: main.py
src/ytindexer/: api.py  config.py  indexer.py  logging.py  queue.py  worker.py
src/ytindexer/api/: dependencies.py  main.py
src/ytindexer/api/models/: response.py
src/ytindexer/api/routes/: channels.py  health.py  videos.py  webhooks.py
src/ytindexer/database/: __init__.py  base.py  elastic.py  mongo.py  valkey.py
src/ytindexer/indexer/: __init__.py  config.py  health.py  indexing.py  main.py  processor.py  results.py  retry.py  stats.py  storage.py  transcript.py
src/ytindexer/queues/: __init__.py  base.py  message.py  notification.py
src/ytindexer/worker/: __init__.py  main.py  parser.py  processor.py
tests/: test_config.py  test_elastic_connection.py  test_mongo_connection.py  test_notification_queue.py
tests/unit/: test_base_async_connection.py  test_config.py  test_elastic_connection.py  test_message_queue.py  test_mongo_connection.py  test_notification_queue.py  test_valkey_connection.py  test_worker_parser.py  test_worker_processor.py
