[project]
name = "ytindexer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "elasticsearch[async]==8.0",
    "fake>=0.8",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "motor>=3.7.0",
    "ngrok>=1.4.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.12.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "slowapi>=0.1.9",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.2",
    "valkey>=6.1.0",
    "youtube-transcript-api>=1.0.3",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pre>=1.3.0",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.12",
]
load-tests = [
    "faker>=37.3.0",
    "locust>=2.37.5",
]
